# python-service-template

./: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
app/api/: dependencies.py  main.py
app/queue/: main.py
config/: __init__.py  queue.py
db/: __init__.py  env.py
infrastructure/: Dockerfile  docker-entrypoint.sh
src/apps/: __init__.py
src/apps/api/: dependencies.py  main.py
src/apps/queue/: main.py
src/config/: __init__.py  api.py  database.py  queue.py  sentry.py
src/db/: __init__.py  env.py
