[tool.poetry]
name = "python-service-template"
version = "0.1.0"
description = ""
authors = ["Alec Joy <alec@alecjoy.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
pydantic-settings = "^2.3.4"
redis = "^5.0.8"
sentry-sdk = "^2.12.0"

fastapi = { version= "^0.112.0", optional=true }
uvicorn = {extras = ["standard"], version = "^0.30.1", optional=true}
celery = {extras = ["redis"], version = "^5.4.0", optional=true}
typer = {version="^0.12.3", optional=true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
alembic = {extras = ["tz"], version = "^1.13.2"}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]
queue = ["celery"]
cli = ["typer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
